@@ -1,7 +1,7 @@
 package ru.nsu.primakova;
 
 import java.util.Arrays;
-import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Class Main.
@@ -13,7 +13,7 @@ public class Main {
      */
     public static void main(String[] args) throws WrongNumberException, InterruptedException {
         int[] arr = {3, 17, 11, 5, 29, 8, 1};
-        var list = Arrays.stream(arr).boxed().toList();
+        var list = Arrays.stream(arr).boxed().collect(Collectors.toList());
         System.out.println(Consistent.isCompositeInArray(arr));
         System.out.println(ParallelStream.isCompositeInArray(list));
         System.out.println(Parallel.isCompositeInArray(arr, 1));
